chore: release version 0.10.3 with automatic PostgreSQL client tools installation
- Update version from 0.10.2 to 0.10.3 in package.json
- Add CHANGELOG.md entry documenting automatic client tools installation features
- Remove temporary dev branch trigger from CI workflow, keep only PR to main and workflow_dispatch
- Apply consistent code formatting (prettier) across multiple files including prompts, binary-manager, dependency-manager, and engine implementations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: [dev] # TODO - (Temporary) trigger on dev pushes for testing
   pull_request:
-    branches: [main, dev]
+    branches: [main]
   workflow_dispatch:
 
 # Cancel in-progress runs when a new run is triggered
