chore: release version 0.10.6 with refactored restore flow and improved error handling
- Update version from 0.10.5 to 0.10.6 in package.json
- Add CHANGELOG.md entry documenting restore flow refactoring and cross-platform improvements
- Refactor handleRestore from recursive to loop-driven using while(true) with continue for back navigation to eliminate stack growth
- Change dumpFromConnectionString to return warnings in result object instead of logging directly; CLI callers now handle display for

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.10.5",
+  "version": "0.10.6",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
   "type": "module",
   "bin": {
@@ -28,6 +28,8 @@
     "database",
     "local",
     "development",
+    "sqlite",
+    "tui",
     "cli"
   ],
   "author": "Bob Bass <bob@bbass.co>",
