--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "scripts": {
     "start": "tsx cli/bin.ts",
     "dev": "tsx watch cli/bin.ts",
-    "test": "pnpm test:pg && pnpm test:mysql && pnpm test:sqlite",
+    "test": "run-s test:all",
     "test:pg": "node --import tsx --test tests/integration/postgresql.test.ts",
     "test:mysql": "node --import tsx --test tests/integration/mysql.test.ts",
     "test:sqlite": "node --import tsx --test tests/integration/sqlite.test.ts",
     "test:unit": "node --import tsx --test tests/unit/*.test.ts",
     "test:cli": "node --import tsx --test tests/integration/cli-e2e.test.ts",
-    "test:integration": "pnpm test:pg && pnpm test:mysql && pnpm test:sqlite",
-    "test:all": "pnpm test:unit && pnpm test:integration",
+    "test:integration": "run-s test:pg test:mysql test:sqlite",
+    "test:all": "run-s test:unit test:integration",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
     "prepare": "husky"
@@ -53,6 +53,7 @@
     "commander": "^12.1.0",
     "inquirer": "^9.3.7",
     "ora": "^8.1.1",
+    "string-width": "^8.1.0",
     "tsx": "^4.7.0",
     "unzipper": "^0.12.3"
   },
@@ -63,6 +64,7 @@
     "@types/unzipper": "^0.10.11",
     "eslint": "^9.39.1",
     "husky": "^9.1.7",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.48.0"
