ci: add dev branch push trigger for CI workflow testing
- Add push trigger for dev branch to CI workflow
- Add TODO comment to remove after testing is complete

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  push:
+    branches: [dev] # TODO: Remove after testing CI
   pull_request:
     branches: [main]
   workflow_dispatch:
