chore: release version 0.11.0 with PostgreSQL 18 support and version check automation
- Update version from 0.10.6 to 0.11.0 in package.json
- Add PostgreSQL 18.1.0 support and set as new default version
- Add pre-commit hook to check for new PostgreSQL versions on zonky.io (scripts/check-pg-versions.ts)
- Update SUPPORTED_MAJOR_VERSIONS to include '18' in binary-urls.ts
- Add '18': '18.1.0' to FALLBACK_VERSION_MAP
- Update defaultVersion and latestVersion to '18' in engine-defaults.ts
- Update documentation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.10.6",
+  "version": "0.11.0",
   "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
   "type": "module",
   "bin": {
@@ -19,6 +19,7 @@
     "test:all": "run-s test:unit test:integration",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
+    "check:pg-versions": "tsx scripts/check-pg-versions.ts",
     "prepare": "husky"
   },
   "keywords": [
