ci: update PostgreSQL version from 17 to 18 in CI workflows and add test concurrency documentation
- Update PostgreSQL download commands from version 17 to 18 in both integration test and CLI E2E test jobs
- Add comments noting version 18 is the default
- Add test concurrency documentation to CLAUDE.md and CONTRIBUTING.md explaining --test-concurrency=1 flag usage
- Document Node 22 macOS worker thread serialization bug that necessitates sequential test execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,9 +71,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # Use SpinDB to download PostgreSQL binaries
+      # Use SpinDB to download PostgreSQL binaries (version 18 is the default)
       - name: Install PostgreSQL via SpinDB
-        run: pnpm start engines download postgresql 17
+        run: pnpm start engines download postgresql 18
 
       # Show what SpinDB installed
       - name: Show installed engines
@@ -219,9 +219,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # Use SpinDB to install all required engines
+      # Use SpinDB to install all required engines (version 18 is the default)
       - name: Install PostgreSQL via SpinDB
-        run: pnpm start engines download postgresql 17
+        run: pnpm start engines download postgresql 18
 
       - name: Install SQLite via SpinDB
         run: pnpm start engines download sqlite
