ci: comment out dev branch push trigger after completing CI workflow testing
- Comment out push trigger for dev branch in CI workflow
- Update TODO comment to indicate trigger is available for future testing
- Keep workflow_dispatch and pull_request triggers active

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
 name: CI
 
 on:
-  push:
-    branches: [dev] # TODO: Remove after testing CI
+  # TODO: uncomment for testing CI on dev branch
+  # push:
+  #   branches: [dev]
   pull_request:
     branches: [main]
   workflow_dispatch:
