ci: add MySQL linking step on macOS before install check for cache compatibility
- Add 'Link MySQL (macOS)' step before 'Install MySQL via SpinDB' step
- Check if MySQL is installed in /opt/homebrew/Cellar/mysql before linking
- Use brew link with error suppression to handle already-linked cases
- Add echo statement to confirm linking status
- Ensures cached MySQL binaries are properly linked before SpinDB checks for existing installations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,6 +163,15 @@ jobs:
           restore-keys: |
             homebrew-mysql-${{ runner.os }}-
 
+      # macOS needs MySQL linked or added to PATH BEFORE install check (for cache hits)
+      - name: Link MySQL (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          if [ -d "/opt/homebrew/Cellar/mysql" ]; then
+            brew link mysql 2>/dev/null || true
+            echo "MySQL linked or already linked"
+          fi
+
       # Cache Chocolatey packages for MySQL on Windows
       - name: Cache Chocolatey packages (Windows)
         if: runner.os == 'Windows'
