ci: remove macOS MySQL caching due to Homebrew dynamic linking issues
- Remove 'Cache Homebrew packages (macOS)' step from MySQL integration tests
- Remove 'Link MySQL (macOS)' step that handled cached installations
- Add NOTE comment explaining Homebrew dependencies (protobuf, zlib) are dynamically linked and not included in Cellar cache, causing dyld errors
- Fresh install is more reliable than partial caching on macOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,26 +151,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # Cache Homebrew downloads for MySQL on macOS
-      - name: Cache Homebrew packages (macOS)
-        if: runner.os == 'macOS'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/Library/Caches/Homebrew
-            /opt/homebrew/Cellar/mysql
-          key: homebrew-mysql-${{ runner.os }}-${{ runner.arch }}
-          restore-keys: |
-            homebrew-mysql-${{ runner.os }}-
-
-      # macOS needs MySQL linked or added to PATH BEFORE install check (for cache hits)
-      - name: Link MySQL (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          if [ -d "/opt/homebrew/Cellar/mysql" ]; then
-            brew link mysql 2>/dev/null || true
-            echo "MySQL linked or already linked"
-          fi
+      # NOTE: macOS MySQL caching removed - Homebrew dependencies (protobuf, zlib)
+      # are dynamically linked and not included in Cellar cache, causing dyld errors.
+      # Fresh install is more reliable than partial caching.
 
       # Cache Chocolatey packages for MySQL on Windows
       - name: Cache Chocolatey packages (Windows)
