--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 
 on:
-  # TODO: uncomment for testing CI on dev branch
+  # TODO: uncomment for testing CI
   # push:
   #   branches: [dev]
   push:
