--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spindb",
-  "version": "0.11.1",
-  "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL.",
+  "version": "0.11.2",
+  "description": "Spin up local database containers without Docker. A DBngin-like CLI for PostgreSQL and MySQL with support for SQLite.",
   "type": "module",
   "bin": {
     "spindb": "./bin/cli.js"
