feat(mongodb): add robust connection string validation and improve error handling
- Add comprehensive input validation for parseConnectionString (null/undefined/type checks)
- Add try-catch around URL parsing with credential masking in error messages
- Add protocol validation to ensure only mongodb:// or mongodb+srv:// are accepted
- Expand JSDoc with detailed format examples, database name handling rules, and error conditions
- Update package description to be more concise and highlight zero-config Docker

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spindb",
   "version": "0.12.0",
-  "description": "Run local database containers without Docker. Supports PostgreSQL, MySQL, SQLite, and MongoDB databases. A lightweight alternative to DBngin/Postgres.app/Atlas all-in-one database management tools with an interactive CLI.",
+  "description": "Zero-config Docker-free local database containers. Create, backup, and clone PostgreSQL, MySQL, MongoDB, and SQLite instances.",
   "type": "module",
   "bin": {
     "spindb": "./bin/cli.js"
