--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -256,8 +256,7 @@ jobs:
 
   # ============================================
   # MongoDB Integration Tests
-  # Uses system-installed MongoDB via Homebrew/apt
-  # Skipped on Windows due to complex MongoDB installation
+  # Uses system-installed MongoDB via Homebrew/apt/Chocolatey
   # ============================================
   test-mongodb:
     name: MongoDB (${{ matrix.os }})
@@ -265,8 +264,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Skip Windows due to complex MongoDB installation
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -303,6 +301,104 @@ jobs:
           # Update and install
           sudo apt-get update
           sudo apt-get install -y mongodb-org mongodb-mongosh mongodb-database-tools
+
+      # Cache Chocolatey packages for MongoDB on Windows
+      - name: Cache Chocolatey packages (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/cache@v4
+        with:
+          path: |
+            C:\ProgramData\chocolatey\lib\mongodb
+            C:\ProgramData\chocolatey\lib\mongodb-shell
+            C:\ProgramData\chocolatey\lib\mongodb-database-tools
+            C:\Program Files\MongoDB
+          key: choco-mongodb-${{ runner.os }}-v1
+          restore-keys: |
+            choco-mongodb-${{ runner.os }}-
+
+      # Windows needs MongoDB added to PATH BEFORE install check (for cache hits)
+      - name: Add MongoDB to PATH (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          $possibleServerPaths = @(
+            "C:\Program Files\MongoDB\Server\8.0\bin",
+            "C:\Program Files\MongoDB\Server\7.0\bin",
+            "C:\Program Files\MongoDB\Server\6.0\bin"
+          )
+          $possibleToolsPaths = @(
+            "C:\Program Files\MongoDB\Tools\100\bin",
+            "C:\ProgramData\chocolatey\lib\mongodb-database-tools\tools"
+          )
+          foreach ($path in $possibleServerPaths) {
+            if (Test-Path $path) {
+              echo "$path" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+              echo "Added MongoDB Server to PATH: $path"
+              break
+            }
+          }
+          foreach ($path in $possibleToolsPaths) {
+            if (Test-Path $path) {
+              echo "$path" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+              echo "Added MongoDB Tools to PATH: $path"
+              break
+            }
+          }
+
+      # Install MongoDB on Windows via Chocolatey
+      - name: Install MongoDB (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          # Check if MongoDB is already installed (cache hit)
+          $mongodExists = Get-Command mongod -ErrorAction SilentlyContinue
+          if (-not $mongodExists) {
+            echo "Installing MongoDB via Chocolatey..."
+            choco install mongodb --yes --no-progress
+          } else {
+            echo "MongoDB already installed (cache hit)"
+          }
+
+          # Check if mongosh is already installed
+          $mongoshExists = Get-Command mongosh -ErrorAction SilentlyContinue
+          if (-not $mongoshExists) {
+            echo "Installing mongosh via Chocolatey..."
+            choco install mongodb-shell --yes --no-progress
+          } else {
+            echo "mongosh already installed (cache hit)"
+          }
+
+          # Check if mongodump is already installed
+          $mongodumpExists = Get-Command mongodump -ErrorAction SilentlyContinue
+          if (-not $mongodumpExists) {
+            echo "Installing mongodb-database-tools via Chocolatey..."
+            choco install mongodb-database-tools --yes --no-progress
+          } else {
+            echo "mongodb-database-tools already installed (cache hit)"
+          }
+
+          # Re-add paths after install (in case they were just created)
+          $possibleServerPaths = @(
+            "C:\Program Files\MongoDB\Server\8.0\bin",
+            "C:\Program Files\MongoDB\Server\7.0\bin",
+            "C:\Program Files\MongoDB\Server\6.0\bin"
+          )
+          $possibleToolsPaths = @(
+            "C:\Program Files\MongoDB\Tools\100\bin",
+            "C:\ProgramData\chocolatey\lib\mongodb-database-tools\tools"
+          )
+          foreach ($path in $possibleServerPaths) {
+            if (Test-Path $path) {
+              echo "$path" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+              break
+            }
+          }
+          foreach ($path in $possibleToolsPaths) {
+            if (Test-Path $path) {
+              echo "$path" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+              break
+            }
+          }
 
       - name: Show installed engines
         run: pnpm start engines list
