--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start": "tsx cli/bin.ts",
     "dev": "tsx watch cli/bin.ts",
     "test": "run-s test:all",
-    "test:pg": "node --import tsx --test --test-concurrency=1 tests/integration/postgresql.test.ts",
-    "test:mysql": "node --import tsx --test --test-concurrency=1 tests/integration/mysql.test.ts",
-    "test:sqlite": "node --import tsx --test --test-concurrency=1 tests/integration/sqlite.test.ts",
-    "test:mongodb": "node --import tsx --test --test-concurrency=1 tests/integration/mongodb.test.ts",
-    "test:unit": "node --import tsx --test --test-concurrency=1 tests/unit/*.test.ts",
-    "test:cli": "node --import tsx --test --test-concurrency=1 tests/integration/cli-e2e.test.ts",
+    "test:pg": "node --import tsx --test --test-concurrency=1 --experimental-test-isolation=none tests/integration/postgresql.test.ts",
+    "test:mysql": "node --import tsx --test --test-concurrency=1 --experimental-test-isolation=none tests/integration/mysql.test.ts",
+    "test:sqlite": "node --import tsx --test --test-concurrency=1 --experimental-test-isolation=none tests/integration/sqlite.test.ts",
+    "test:mongodb": "node --import tsx --test --test-concurrency=1 --experimental-test-isolation=none tests/integration/mongodb.test.ts",
+    "test:unit": "node --import tsx --test --test-concurrency=1 --experimental-test-isolation=none tests/unit/*.test.ts",
+    "test:cli": "node --import tsx --test --test-concurrency=1 --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
     "test:integration": "run-s test:pg test:mysql test:sqlite test:mongodb",
     "test:all": "run-s test:unit test:integration",
     "format": "prettier --write .",
